# vibevoicecli

./: Cargo.toml  LICENSE  README.md
src/: audio.rs  cli.rs  config.rs  engine.rs  main.rs  progress.rs
