[package]
name = "vibevoicecli"
version = "0.1.0"
edition = "2021"
authors = ["vibevoicecli contributors"]
license = "GPL-3.0-or-later"
description = "A standalone, portable voicecli-like CLI for VibeVoice Text-to-Speech"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.35", features = ["full"] }
indicatif = "0.17"
hound = "3.5"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
console = "0.15"
